src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
/* ... */
body {
   background: BACKGROUNDGRADIENT repeat-x top #e1e2e5;
}

body {
   font-family: proportionalFont;
   font-size: 12px;
   -ms-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
}

select {
   font-size: 12px;
}

@if rstudio.desktop true {
.macintosh select {
   font-size: 11px;
   text-indent: 0.1em;
}
}

input[type=text] {
   font-family: proportionalFont;
}
input[type=text][disabled] {
   background-color: transparent;
}
button, input[type="reset"], input[type="button"], input[type="submit"] {
   color: black;
}
.fixedWidthFont {
   font-family: fixedWidthFont !important;
}

.gwt-Label {
   cursor: default;
}

.selectableText {
  -ms-user-select: text;
  -moz-user-select: text;
  -webkit-user-select: text;
  user-select: text;
  cursor: text;
}

@if rstudio.desktop false {
@if user.agent safari {
.macintosh .forceMacScrollbars ::-webkit-scrollbar { 
   -webkit-appearance: none; 
   width: 12px; 
   height: 12px; 
}
   
.macintosh .forceMacScrollbars ::-webkit-scrollbar-track {
   
   background: rgb(251,251,251);
   -webkit-box-shadow: 0 1px 0 0 rgba(255,255,255,0.35);
   -webkit-border-radius: 5px;
}   
   
.macintosh .forceMacScrollbars ::-webkit-scrollbar-thumb { 
  
   border: 2px solid rgb(251,251,251);
   background: rgba(0,0,0,.22);
   -webkit-border-radius: 6px;
   -webkit-background-clip: padding-box;
}
}
@else {
.forceMacScrollbars {}	
}
}
@else {
.forceMacScrollbars {}
}

.gwt-DialogBox input[type=text] {
   border: 1px solid #999;
   height: 17px;
}
.gwt-DialogBox .search input[type=text] {
   border: none;
   height: 100%;
}

iframe {
   border: none;
}

button {
   cursor: pointer;
}
.handCursor {
	cursor: pointer;
}

@if rstudio.desktop true {
.linux button {
   cursor: HANDCURSOR 9 5, pointer;
}

.linux .handCursor {
    
   cursor: HANDCURSOR 9 5, pointer;
}
}

textarea {
   outline: none;
}

pre {
  font-family: fixedWidthFont;
  font-size: 12px;
}

.ace_editor {
   border: none !important;
}

.ace_editor, .ace_text-layer {
  font-family: fixedWidthFont !important;
}

.ace_breakpoint,
.ace_pending-breakpoint,
.ace_inactive-breakpoint,
.ace_executing-line
{
   background-position: 12% center !important;
   background-repeat: no-repeat !important;
}

.ace_breakpoint
{
   background-image: ACTIVEBREAKPOINT !important;
}

.ace_pending-breakpoint
{
	background-image: PENDINGBREAKPOINT !important;
}

.ace_inactive-breakpoint
{
	background-image: INACTIVEBREAKPOINT !important;
}

.ace_executing-line
{
	background-image: EXECUTINGLINE !important;
}


.ace_gutter-cell.ace_chunk-queued-line,
.ace_gutter-cell.ace_chunk-error-line
{
   position: relative;
}

.ace_chunk-queued-line:before,
.ace_chunk-error-line:before
{
   position: absolute;
   top: 0;
   right: 3px;
   content: '';
   display: block;
   height: 100%;
   width: 7px;
   z-index: -100;
}

.ace_chunk-queued-line:before
{
   background-color: rgb(24, 163, 82);
   opacity: 0.3;
}

.ace_chunk-error-line:before
{
   background-color: rgb(201, 90, 96);
}

.ace_chunk-error-line:before,
.ace_chunk-executed-line:before
{
   opacity: 1;
}

.ace_chunk-resting-line:before
{
   transition: opacity 500ms ease;
   opacity: 0;
}


.ace_sb
{
	z-index: 6;
}

.gwt-MenuBar {
   cursor: default;
}

.gwt-MenuBar>table {
   border-spacing: 0;
}
.gwt-MenuBar-vertical {
   cursor: default;
}

.gwt-MenuBar .subMenuIcon {
   width: 7px;
}

.gwt-MenuItem {
   padding: 4px;
   white-space: nowrap;
}
.gwt-MenuItem.disabled {
   color: #888;
   background-image: none;
}
.gwt-MenuItem.disabled img {
   opacity: 0.3;
}

.gwt-MenuItemSeparator .menuSeparatorInner{
   border-top: #BABABA 1px solid;
   margin-top: 1px;
   margin-bottom: 2px;
}

.scrollableMenuBar .gwt-MenuItem {
   padding-right: 20px;
}

.menuRightImage {
   cursor: pointer;
}


.highlight {
   color: #900 !important;
}

@if rstudio.desktop false {
.gwt-PopupPanelGlass {
   background-color: black;
   filter: literal("alpha(opacity = 15)") !important;
   opacity: 0.15; /* non-IE */
   z-index: 1000;
}
}

@if rstudio.desktop true {
@sprite .gwt-PopupPanelGlass {
   gwt-image: 'clear';
}
}


.cueText {
   color: #CCC;
}

.adornedText {
   color: #606060;
}


/** Dialogs **/

.miniDialogPopupPanel {
}

.miniDialogPopupPanel .miniDialogContainer {
   position: relative;
   top: -32px;
   margin-bottom: -32px;
}

.miniDialogPopupPanel .miniDialogCaption {
	font-weight: normal;
   font-size: 11px;
   cursor: default;
   margin-bottom: 10px;
   margin-left: -2px;
   padding-top: 1px;
}

.miniDialogPopupPanel .miniDialogTools {
	position: relative;
	top: -2px;
	right: -12px;
}

.gwt-DialogBox-ModalDialog, .gwt-DecoratedPopupPanel {
   z-index: 1000;
}

.gwt-SuggestBoxPopup {
   z-index: 1000;	
   cursor: default;
}

.gwt-DialogBox .dialogTopLeft, .miniDialogPopupPanel .popupTopLeft {
   background: DIALOGTOPLEFT no-repeat;
}
.gwt-DialogBox .dialogTopLeft, .gwt-DialogBox .dialogTopLeftInner, .miniDialogPopupPanel .popupTopLeft, .miniDialogPopupPanel .popupTopLeftInner {
   width: 32px;
   height: 32px;
}
.gwt-DialogBox .dialogTopCenter, .miniDialogPopupPanel .popupTopCenter {
   background: DIALOGTOP repeat-x;
   height: 32px;
}
.gwt-DialogBox .dialogTopCenterInner .Caption {
   font-weight: normal;
   font-size: 11px;
   cursor: default;
   padding-top: 7px;
   margin-top: 1px;
   margin-left: -2px;
}
.gwt-DialogBox .dialogTopRight, .miniDialogPopupPanel .popupTopRight {
   background: DIALOGTOPRIGHT no-repeat;
}
.gwt-DialogBox .dialogTopRight, .gwt-DialogBox .dialogTopRightInner, .miniDialogPopupPanel .popupTopRight, .miniDialogPopupPanel .popupTopRightInner {
   width: 32px;
   height: 32px;
}
.gwt-DialogBox .dialogMiddleLeft, .miniDialogPopupPanel .popupMiddleLeft {
   background: DIALOGLEFT repeat-y;
   width: 32px;
}
.gwt-DialogBox .dialogMiddleCenter, .miniDialogPopupPanel .popupMiddleCenter {
   background: #F3F4F4;
}
/* ... */

